isucon9_qualify/cf-template-isucon9-qualify.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  AWS CloudFormation for ISUCON9 qualify

Parameters:
  KeyPairName:
    Description: "Amazon EC2 Key Pair"
    Type: AWS::EC2::KeyPair::KeyName
  # GitHubUsername:
  #   Description: "GitHub Username for SSH public key"
  #   Type: String

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: "192.168.0.0/16"
      EnableDnsSupport: "true"
      EnableDnsHostnames: "true"
      InstanceTenancy: default
  InternetGateway:
    Type: AWS::EC2::InternetGateway
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC
  Subnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: "ap-northeast-1c"
      CidrBlock: "192.168.0.0/24"
      VpcId: !Ref VPC
      MapPublicIpOnLaunch: False
  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
  Route:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref InternetGateway
  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet
      RouteTableId: !Ref RouteTable
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Security Group for ISUCON9 qualify
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "22"
          ToPort: "22"
          CidrIp: "0.0.0.0/0"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "0.0.0.0/0"
        - IpProtocol: -1
          CidrIp: "192.168.0.0/24"

  Instance1:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-01e5d6ed3030d5df4
      InstanceType: c7a.large
      SecurityGroupIds:
        - !Ref SecurityGroup
      SubnetId: !Ref Subnet
      PrivateIpAddress: "192.168.0.11"
      KeyName: !Ref KeyPairName
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 40
            VolumeType: gp3
      Tags:
        - Key: Name
          Value: isucon9-qualify-1
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          github_usernames=(
            "itohdak"
            "Kotaro7750"
            "yakenji"
          )
          mkdir -p /home/isucon/.ssh
          for github_username in "${!github_usernames[@]}"; do
            curl -s https://github.com/$github_username.keys >> /home/isucon/.ssh/authorized_keys
          done
          chown -R isucon:isucon /home/isucon/.ssh
          chmod 600 /home/isucon/.ssh/authorized_keys
          sudo /home/isucon/add_hosts.sh 192.168.0.100
          sudo /etc/nginx/update_cert.sh
  InstanceIP1:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      InstanceId: !Ref Instance1
  Instance2:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-01e5d6ed3030d5df4
      InstanceType: c7a.large
      SecurityGroupIds:
        - !Ref SecurityGroup
      SubnetId: !Ref Subnet
      PrivateIpAddress: "192.168.0.12"
      KeyName: !Ref KeyPairName
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 40
            VolumeType: gp3
      Tags:
        - Key: Name
          Value: isucon9-qualify-2
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          github_usernames=(
            "itohdak"
            "Kotaro7750"
            "yakenji"
          )
          mkdir -p /home/isucon/.ssh
          for github_username in "${!github_usernames[@]}"; do
            curl -s https://github.com/$github_username.keys >> /home/isucon/.ssh/authorized_keys
          done
          chown -R isucon:isucon /home/isucon/.ssh
          chmod 600 /home/isucon/.ssh/authorized_keys
          sudo /home/isucon/add_hosts.sh 192.168.0.100
          sudo /etc/nginx/update_cert.sh
  InstanceIP2:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      InstanceId: !Ref Instance2
  Instance3:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-01e5d6ed3030d5df4
      InstanceType: c7a.large
      SecurityGroupIds:
        - !Ref SecurityGroup
      SubnetId: !Ref Subnet
      PrivateIpAddress: "192.168.0.13"
      KeyName: !Ref KeyPairName
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 40
            VolumeType: gp3
      Tags:
        - Key: Name
          Value: isucon9-qualify-3
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          github_usernames=(
            "itohdak"
            "Kotaro7750"
            "yakenji"
          )
          mkdir -p /home/isucon/.ssh
          for github_username in "${!github_usernames[@]}"; do
            curl -s https://github.com/$github_username.keys >> /home/isucon/.ssh/authorized_keys
          done
          chown -R isucon:isucon /home/isucon/.ssh
          chmod 600 /home/isucon/.ssh/authorized_keys
          sudo /home/isucon/add_hosts.sh 192.168.0.100
          sudo /etc/nginx/update_cert.sh
  InstanceIP3:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      InstanceId: !Ref Instance3
        # BenchInstance:
        #   Type: AWS::EC2::Instance
        #   Properties:
        #     ImageId: ami-02cd0768ce7639d01
        #     InstanceType: c7a.xlarge
        #     SecurityGroupIds:
        #       - !Ref SecurityGroup
        #     SubnetId: !Ref Subnet
        #     PrivateIpAddress: "192.168.0.20"
        #     KeyName: !Ref KeyPairName
        #     BlockDeviceMappings:
        #       - DeviceName: /dev/sda1
        #         Ebs:
        #           VolumeSize: 40
        #           VolumeType: gp3
        #     Tags:
        #       - Key: Name
        #         Value: isucon9-qualify-bench
        #     UserData:
        #       Fn::Base64: !Sub |
        #         #!/bin/bash
        #         github_usernames=(
        #           "itohdak"
        #           "Kotaro7750"
        #           "yakenji"
        #         )
        #         mkdir -p /home/isucon/.ssh
        #         for github_username in "${!github_usernames[@]}"; do
        #           curl -s https://github.com/$github_username.keys >> /home/isucon/.ssh/authorized_keys
        #         done
        #         chown -R isucon:isucon /home/isucon/.ssh
        #         chmod 600 /home/isucon/.ssh/authorized_keys
        # BenchInstanceIP:
        #   Type: AWS::EC2::EIP
        #   Properties:
        #     Domain: vpc
        #     InstanceId: !Ref BenchInstance
